put conversions and formatting into helper class and use these for favorite overview too