@@ -7,19 +7,11 @@ import at.qe.skeleton.internal.model.Location;
 import at.qe.skeleton.internal.services.*;
 import at.qe.skeleton.internal.services.exceptions.FailedApiRequest;
 import at.qe.skeleton.internal.services.exceptions.GeocodingApiReturnedEmptyListException;
-import at.qe.skeleton.internal.ui.beans.SessionInfoBean;
 import at.qe.skeleton.internal.ui.controllers.IconController;
 import jakarta.annotation.PostConstruct;
 import jakarta.faces.application.FacesMessage;
 import jakarta.faces.context.FacesContext;
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZoneOffset;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -126,61 +118,29 @@ public class WeatherBean {
   }
 
   /**
-   * Gets the daily weather entries for the current and next 3 days (3+1 daily DTOs) 
-   * or current and next 8 days (8+1 daily DTOs).
-   * The amount of returned daily weatherDTO's depends on sessionInfoBean.isUserPremium().
+   * Gets the daily weather entries for the current and next 3 days (3+1 daily DTOs) or current and
+   * next 8 days (8+1 daily DTOs). The amount of returned daily weatherDTO's depends on
+   * sessionInfoBean.isUserPremium().
    *
    * @return The list of daily weather entries.
    */
   public List<DailyWeatherDTO> getDailyWeatherEntries() {
-    return weatherDTO.dailyWeather().stream().limit((sessionInfoBean.isUserPremium() ? 9 : 4)).collect(Collectors.toList());
+    return weatherDTO.dailyWeather().stream()
+        .limit((sessionInfoBean.isUserPremium() ? 9 : 4))
+        .toList();
   }
 
   /**
-   * Gets the hourly weather entries for the current and next 24 hours (24+1 hourly DTOs) 
-   * or current and next 48 hours (48+1 hourly DTOs).
-   * The amount of returned daily weatherDTO's depends on sessionInfoBean.isUserPremium().
+   * Gets the hourly weather entries for the current and next 24 hours (24+1 hourly DTOs) or current
+   * and next 48 hours (48+1 hourly DTOs). The amount of returned daily weatherDTO's depends on
+   * sessionInfoBean.isUserPremium().
    *
    * @return The list of hourly weather entries.
    */
   public List<HourlyWeatherDTO> getHourlyWeatherEntries() {
-    return weatherDTO.hourlyWeather().stream().limit((sessionInfoBean.isUserPremium() ? 49 : 25)).collect(Collectors.toList());
-  }
-
-  /**
-   * Formats an instant timestamp to a date-time string using a given specified format. Used to
-   * convert multiple occurrences of timestamps (Type Instant) in the weather details table to the
-   * desired formats.
-   *
-   * @param timezone String of the timezone.
-   * @param timestamp Instant timestamp.
-   * @param format Desired date-time format so e.g. "HH:mm" or "dd.MM.yyyy - HH:mm".
-   * @return A formatted date-time string.
-   */
-  public String formatInstantToDateTime(String timezone, Instant timestamp, String format) {
-    ZoneId zoneId = ZoneId.of(timezone);
-    LocalDateTime localDateTime = LocalDateTime.ofInstant(timestamp, zoneId);
-    DateTimeFormatter formatter = DateTimeFormatter.ofPattern(format);
-    return localDateTime.format(formatter);
-  }
-
-  /**
-   * Converts a direction in metrological degrees to a cardinal direction string.
-   *
-   * @param degrees Direction in metrological degrees, from 0 to 360.
-   * @return a string for the cardinal direction
-   */
-  public String degreesToCardinal(double degrees) {
-    String[] directions = {
-      "N", "NNE", "NE", "ENE", "E", "ESE", "SE", "SSE", "S", "SSW", "SW", "WSW", "W", "WNW", "NW",
-      "NNW"
-    };
-    int dir = (int) (((degrees + 11.25) % 360) / 22.5);
-    return directions[dir];
-  }
-
-  public Long msToKmh(Double mps) {
-    return Math.round(mps * 3.6);
+    return weatherDTO.hourlyWeather().stream()
+        .limit((sessionInfoBean.isUserPremium() ? 49 : 25))
+        .toList();
   }
 
   public String getLocationSearchInput() {
